tests/paczka1/fuzzy1/26897571.err
Error in line 8: rSlFFgDjqBB S70 79,42
Error in line 6: wzq S919 23,5
Error in line 36: ยน70 ยน270 60,2
Error in line 35: S7pW5b S919 69,2
Error in line 37: S7pW5b S270 60,0
